--- a/index.html
+++ b/index.html
@@ -80,17 +80,17 @@
       let score = 0;
       let currentQuestion = 0;
       const questions = [
-        { text: "I ( work - works ) in the shop every day.", options: ["work", "works"], answer: "work" },
-        { text: "He ( play - plays ) football every evening.", options: ["play", "plays"], answer: "plays" },
-        { text: "We ( cook - cooks) delicious meal at 7 PM.", options: ["cook", "cooks"], answer: "cook" },
-        { text: "She ( run - runs) in the park.", options: ["run", "runs"], answer: "runs" },
-        { text: "Children (play - plays ) together.", options: ["play", "plays"], answer: "play" },
-        { text: "She ( write - writes ) homework.", options: ["write", "writes"], answer: "writes" },
-        { text: "He ( help - helps )in gardening.", options: ["help", "helps"], answer: "helps" },
-        { text: "They (sing - sings ) songs. ", options: ["sing", "sings"], answer: "sing" },
-        { text: "You ( like - likes ) strawberries.", options: ["like", "likes"], answer: "like" },
-        { text: "Sara ( play - plays ) the guitar.", options: ["play", "plays"], answer: "plays" },
-        { text: "My sister ( walk - walks ) to school everyday.", options: ["walk", "walks"], answer: "walks" },
+        { text: "I _____ in the shop every day.", options: ["work", "works"], answer: "work" },
+        { text: "He _____ football every evening.", options: ["play", "plays"], answer: "plays" },
+        { text: "We _____ delicious meal at 7 PM.", options: ["cook", "cooks"], answer: "cook" },
+        { text: "She _____ in the park.", options: ["run", "runs"], answer: "runs" },
+        { text: "Children _____ together.", options: ["play", "plays"], answer: "play" },
+        { text: "She _____ homework.", options: ["write", "writes"], answer: "writes" },
+        { text: "He _____ in gardening.", options: ["help", "helps"], answer: "helps" },
+        { text: "They _____ songs. ", options: ["sing", "sings"], answer: "sing" },
+        { text: "You _____ strawberries.", options: ["like", "likes"], answer: "like" },
+        { text: "Sara _____ the guitar.", options: ["play", "plays"], answer: "plays" },
+        { text: "My sister _____ to school everyday.", options: ["walk", "walks"], answer: "walks" },
         {
           text: "Ahmed and Salim ( talk -talks ) about different topics every evening.",
           options: ["talk", "talks"],
